src/components/Drawer/index.scss
.drawer {
    background-color: rgb(var(--color-surface));
    border: 1px solid rgba(var(--color-on-surface), var(--opacity3));
    border-radius: 0 12px 12px 0;
    width: 280px;
    height: 100dvh;
    box-shadow: var(--elevation3);
    left: 0;
    max-height: 100dvh;
    max-width: min(280px, calc(100% - 80px));
    overflow: hidden;
    top: 0;
    outline: none;
    transform: translateX(-100%);
    transition-duration: .3s;

    [data-corner=sharp] & {
        border-radius: 0;
    }

    [data-corner=semi-round] & {
        border-radius: 0 8px 8px 0;
    }
    
    [data-corner=full-round] & {
        border-radius: 0 28px 28px 0;
    }

    [data-theme=dark] & {
        background-color: rgba(36, 36, 36, var(--opacity-inv1));
        border: 1px solid rgba(0, 0, 0, var(--opacity-inv5));
    }
    [data-theme=system] & {
        @media (prefers-color-scheme: dark) {
            background-color: rgba(36, 36, 36, var(--opacity-inv1));
            border: 1px solid rgba(0, 0, 0, var(--opacity-inv5));
        }
    }

    &::backdrop {
        background-color: transparent;
        transition-duration: .3s;
    }

    &[data-right] {
        left: auto;
        right: 0;
        transform: translateX(100%);
        border-radius: 12px 0 0 12px;

        [data-corner=semi-round] & {
            border-radius: 8px 0 0 8px;
        }
    
        [data-corner=full-round] & {
            border-radius: 28px 0 0 28px;
        }
    }

    &[data-open] {
        transform: translateX(0%);

        &::backdrop {
            background-color: rgba(0, 0, 0, var(--opacity-inv5));
        }
    }

    &[data-focus] > div {
        outline-color: rgb(var(--color-accent));
        outline-width: 4px;
        outline-offset: -4px;
        animation: flyout-focus 1s;
    }

    > div {
        border-radius: inherit;
        max-height: inherit;
        max-width: 100%;
        width: 100%;
        height: inherit;
        overflow: hidden;
        position: relative;
        display: flex;
        gap: 4px;
        flex-direction: column;
        align-items: flex-start;

        > div:empty {
            display: none;
        }
    }
}

.drawer-footer {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 4px;
    padding: 8px;
}

.drawer-content {
    display: flex;
    flex-direction: column;
    gap: 4px;
    padding: 8px;
    flex: 1;
    max-height: 100%;
    width: 100%;
    overflow: auto;
}

.drawer-header {
    width: 100%;
    font-size: var(--font-size-m);
    font-weight: 500;
    padding: 8px 8px 0 8px;
    display: flex;
    align-items: center;
    gap: 8px;

    &:not(:empty) + .drawer-content {
        padding-top: 8px !important;
    }
}

.drawer-item {
    --btn-padding: 4px 8px;
    justify-content: flex-start;
    width: 100%;

    &[data-selected] > .btn-layer > .icon:first-child {
        color: rgb(var(--color-accent));
    }

    @media (hover: none) {
        min-height: 40px !important;

        [data-corner=full-round] & {
            border-radius: 20px !important;
        }
    }

    &[data-trailing]{
        > .btn-layer {
            width: 100%;
        }
    }

    > .btn-layer {
        white-space: nowrap;
    }
}

